--- a/sass/05-templates/_05-tickets.scss
+++ b/sass/05-templates/_05-tickets.scss
@@ -5,6 +5,7 @@
 		thead, tbody, th, td, tr {
 			display: block;
 			max-width: 100%;
+			border: none;
 		}
 		/* Hide table headers (but not display: none;, for accessibility) */
 		thead tr {
@@ -40,10 +41,11 @@
 }
 
 .tix_tickets_table:not(.tix-attendee-form):not(.tix-order-summary){
-	max-width: 100%;
-	display: block;
-	width: 99%;
+	text-align: left;
 	@media (max-width: 480px)  {
+		max-width: 100%;
+		display: block;
+		width: 99%;
 		tr{
 			margin-bottom: 4rem;
 		}
@@ -74,6 +76,9 @@
 	}
 }
 
+.tix-js input[type="submit"]{
+	float: none !important;
+}
 
 /*_______ Order Sumary _______*/
 .tix-order-summary{
